feat: simplify end-to-end validation deployment
